aksAppgw/manifests/haproxy-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-controller
  labels:
    name: haproxy-controller
