aksAppgw/manifests/nginx-health-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-health-check
  namespace: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /healthz
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-default-backend
            port:
              number: 80
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: nginx-default-backend
            port:
              number: 80
